--- a/DBUpgrader/DBUpgrader.csproj
+++ b/DBUpgrader/DBUpgrader.csproj
@@ -242,6 +242,7 @@
     <Compile Include="V1\UpgradeDB.1.0.0.028.cs" />
     <Compile Include="V1\UpgradeDB.1.0.0.045.cs" />
     <Compile Include="V1\UpgradeDB.1.0.0.062.cs" />
+    <Compile Include="V1\UpgradeDB.1.0.0.077.cs" />
     <Compile Include="V1\UpgradeDB.1.0.0.076.cs" />
     <Compile Include="V1\UpgradeDB.1.0.0.075.cs" />
     <Compile Include="V1\UpgradeDB.1.0.0.074.cs" />
