scriban a DM knihovny update

--- a/Lib/app.config
+++ b/Lib/app.config
@@ -167,10 +167,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://adisrws.mfcr.cz/adistc/axis2/services/rozhraniCRPDPH.rozhraniCRPDPHSOAP"
-        binding="basicHttpBinding" bindingConfiguration="rozhraniCRPDPHSOAP"
-        contract="Data.External.NespolehlivyPlatceDPH.rozhraniCRPDPH"
-        name="rozhraniCRPDPHSOAP" />
+      <endpoint address="https://adisrws.mfcr.cz/adistc/axis2/services/rozhraniCRPDPH.rozhraniCRPDPHSOAP" binding="basicHttpBinding" bindingConfiguration="rozhraniCRPDPHSOAP" contract="Data.External.NespolehlivyPlatceDPH.rozhraniCRPDPH" name="rozhraniCRPDPHSOAP" />
     </client>
   </system.serviceModel>
   <startup>
