--- a/PeopleLoader/packages.config
+++ b/PeopleLoader/packages.config
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Devmasters.Batch" version="2.1.1" targetFramework="net48" />
+  <package id="Devmasters.Batch" version="2.1.2" targetFramework="net48" />
   <package id="Devmasters.Collections" version="2.1.1" targetFramework="net48" />
-  <package id="Devmasters.Core" version="2.1.6" targetFramework="net48" />
+  <package id="Devmasters.Core" version="2.1.8" targetFramework="net48" />
   <package id="Devmasters.IO" version="2.1.2" targetFramework="net48" />
   <package id="Devmasters.Logging" version="2.1.1" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.24" targetFramework="net472" />
   <package id="log4net" version="2.0.11" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
   <package id="SharpZipLib" version="1.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net48" />
