--- a/Util/packages.config
+++ b/Util/packages.config
@@ -3,11 +3,11 @@
   <package id="Common.Logging" version="3.4.1" targetFramework="net472" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net472" />
   <package id="CouchbaseNetClient" version="2.7.22" targetFramework="net48" allowedVersions="(,3.0)" />
-  <package id="Devmasters.Batch" version="2.1.1" targetFramework="net48" />
+  <package id="Devmasters.Batch" version="2.1.2" targetFramework="net48" />
   <package id="Devmasters.Cache" version="2.1.2" targetFramework="net472" requireReinstallation="true" />
   <package id="Devmasters.Cache.Couchbase" version="2.0.1" targetFramework="net48" />
   <package id="Devmasters.Collections" version="2.1.1" targetFramework="net472" requireReinstallation="true" />
-  <package id="Devmasters.Core" version="2.1.6" targetFramework="net472" requireReinstallation="true" />
+  <package id="Devmasters.Core" version="2.1.8" targetFramework="net48" />
   <package id="Devmasters.Crypto" version="2.1.0" targetFramework="net472" requireReinstallation="true" />
   <package id="Devmasters.DT" version="2.1.2" targetFramework="net472" requireReinstallation="true" />
   <package id="Devmasters.Enums" version="2.1.4" targetFramework="net472" requireReinstallation="true" />
@@ -33,7 +33,7 @@
   <package id="NEST" version="7.8.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="OpenTracing" version="0.12.1" targetFramework="net472" />
-  <package id="Scriban" version="2.1.4" targetFramework="net48" />
+  <package id="Scriban" version="3.0.6" targetFramework="net48" />
   <package id="SharpZipLib" version="1.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net472" />
