--- a/Util/packages.config
+++ b/Util/packages.config
@@ -4,16 +4,16 @@
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net472" />
   <package id="CouchbaseNetClient" version="2.7.22" targetFramework="net48" allowedVersions="(,3.0)" />
   <package id="Devmasters.Batch" version="2.1.2" targetFramework="net48" />
-  <package id="Devmasters.Cache" version="2.1.2" targetFramework="net472" requireReinstallation="true" />
+  <package id="Devmasters.Cache" version="2.1.2" targetFramework="net48" />
   <package id="Devmasters.Cache.Couchbase" version="2.0.1" targetFramework="net48" />
-  <package id="Devmasters.Collections" version="2.1.1" targetFramework="net472" requireReinstallation="true" />
+  <package id="Devmasters.Collections" version="2.1.1" targetFramework="net48" />
   <package id="Devmasters.Core" version="2.1.8" targetFramework="net48" />
-  <package id="Devmasters.Crypto" version="2.1.0" targetFramework="net472" requireReinstallation="true" />
-  <package id="Devmasters.DT" version="2.1.2" targetFramework="net472" requireReinstallation="true" />
-  <package id="Devmasters.Enums" version="2.1.4" targetFramework="net472" requireReinstallation="true" />
+  <package id="Devmasters.Crypto" version="2.1.0" targetFramework="net48" />
+  <package id="Devmasters.DT" version="2.1.2" targetFramework="net48" />
+  <package id="Devmasters.Enums" version="2.1.4" targetFramework="net48" />
   <package id="Devmasters.IO" version="2.1.2" targetFramework="net48" />
   <package id="Devmasters.Lang" version="2.1.1" targetFramework="net48" />
-  <package id="Devmasters.Logging" version="2.1.1" targetFramework="net472" requireReinstallation="true" />
+  <package id="Devmasters.Logging" version="2.1.1" targetFramework="net48" />
   <package id="Devmasters.Net" version="2.1.4" targetFramework="net48" />
   <package id="Elasticsearch.Net" version="7.8.2" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.28" targetFramework="net48" />
@@ -41,7 +41,7 @@
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
-  <package id="System.IO.FileSystem" version="4.0.0" targetFramework="net472" />
+  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
