--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -552,6 +552,7 @@
     <Compile Include="Controllers\ApiV2\ApiV2AuthController.cs" />
     <Compile Include="Controllers\ApiV2\ApiV2InternalQControler.cs" />
     <Compile Include="Controllers\ApiV2\ApiV2KindexController.cs" />
+    <Compile Include="Controllers\ApiV2\ApiV2DotaceController.cs" />
     <Compile Include="Controllers\ApiV2\ApiV2WebyController.cs" />
     <Compile Include="Controllers\ApiV2\ApiV2FirmyControler.cs" />
     <Compile Include="Controllers\ApiV2\ApiV2DatasetyControler.cs" />
