--- a/DatasetParsers/Vybory-PSP/packages.config
+++ b/DatasetParsers/Vybory-PSP/packages.config
@@ -8,9 +8,11 @@
   <package id="Devmasters.Lang" version="2.1.2" targetFramework="net48" />
   <package id="Devmasters.Logging" version="2.1.2" targetFramework="net48" />
   <package id="Devmasters.Net" version="2.1.5" targetFramework="net48" />
+  <package id="Devmasters.SpeechToText" version="2.2.4" targetFramework="net48" />
   <package id="HlidacStatu.Api.Dataset.Connector" version="1.3.3" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.28" targetFramework="net48" />
   <package id="IPNetwork2" version="2.5.240" targetFramework="net48" />
+  <package id="KaldiASR.SpeechToText" version="2.2.2" targetFramework="net48" />
   <package id="log4net" version="2.0.12" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Http.Extensions" version="2.2.0" targetFramework="net48" />
@@ -18,6 +20,7 @@
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.Net.Http.Headers" version="2.2.8" targetFramework="net48" />
+  <package id="Newton.SpeechToText.Cloud" version="2.2.1" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json.Schema" version="3.0.13" targetFramework="net472" />
   <package id="SharpZipLib" version="1.3.1" targetFramework="net48" />
