--- a/.gitignore
+++ b/.gitignore
@@ -364,6 +364,7 @@ Web.Statu/App_Data/dump/*
 !Web.Statu/App_Data/KIndex*
 !Web.Statu/App_Data/Label*.png
 !Web.Statu/App_Data/PercentileBanner.svg
+Web.Statu/App_Data/autocomplete.json
 
 
 
