--- a/Plugin.Enhancers/app.config
+++ b/Plugin.Enhancers/app.config
@@ -31,10 +31,6 @@
         <bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="TikaOnDotNet" publicKeyToken="fd70f0f601f583f3" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.14.2.0" newVersion="1.14.2.0" />
-      </dependentAssembly>
-      <dependentAssembly>
         <assemblyIdentity name="ICSharpCode.SharpZipLib" publicKeyToken="1b03e6acf1164f73" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.3.1.9" newVersion="1.3.1.9" />
       </dependentAssembly>
@@ -141,6 +137,30 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Net.Http.Headers" publicKeyToken="adb9793829ddae60" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.2.8.0" newVersion="2.2.8.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.OpenJDK.Core" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.2.4630.5" newVersion="7.2.4630.5" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.Runtime" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.1.5717.0" newVersion="8.1.5717.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.OpenJDK.Util" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.1.5717.0" newVersion="8.1.5717.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.OpenJDK.Security" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.1.5717.0" newVersion="8.1.5717.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.OpenJDK.Text" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.1.5717.0" newVersion="8.1.5717.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.OpenJDK.XML.API" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.1.5717.0" newVersion="8.1.5717.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
