--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -476,6 +476,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="Data\Autocomplete.cs" />
     <Compile Include="Data\Bookmark.IBookmarkable.cs" />
     <Compile Include="Data\Firma.Statistics.Dotace.cs" />
     <Compile Include="Data\Osoba.Statistics.RegistrSmluv.cs" />
