--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -489,6 +489,7 @@
     <Compile Include="Data\Sponzoring.cs">
       <DependentUpon>Db.tt</DependentUpon>
     </Compile>
+    <Compile Include="Data\ZkratkaStrany.Partial.cs" />
     <Compile Include="ES\QueryGrouped.cs" />
     <Compile Include="Analysis\KorupcniRiziko\Backup.cs" />
     <Compile Include="Analysis\KorupcniRiziko\Calculator.Indexy.cs" />
