--- a/.gitignore
+++ b/.gitignore
@@ -375,3 +375,4 @@ Web.Statu/App_Data/autocomplete.json
 HlidacStatu.Q.ClassificationRepair/appsettings.json
 
 HlidacStatu.ClassificationRepair/appsettings.json
+Web.Statu/WebApp.Stage_Release.config.bak
