--- a/DBUpgrader/DBUpgrader.csproj
+++ b/DBUpgrader/DBUpgrader.csproj
@@ -242,6 +242,9 @@
     <Compile Include="V1\UpgradeDB.1.0.0.028.cs" />
     <Compile Include="V1\UpgradeDB.1.0.0.045.cs" />
     <Compile Include="V1\UpgradeDB.1.0.0.062.cs" />
+    <Compile Include="V1\UpgradeDB.1.0.0.081.cs" />
+    <Compile Include="V1\UpgradeDB.1.0.0.080.cs" />
+    <Compile Include="V1\UpgradeDB.1.0.0.079.cs" />
     <Compile Include="V1\UpgradeDB.1.0.0.078.cs" />
     <Compile Include="V1\UpgradeDB.1.0.0.077.cs" />
     <Compile Include="V1\UpgradeDB.1.0.0.076.cs" />
