--- a/Plugin.Enhancers/packages.config
+++ b/Plugin.Enhancers/packages.config
@@ -3,26 +3,26 @@
   <package id="Devmasters.Batch" version="2.1.3" targetFramework="net48" />
   <package id="Devmasters.Collections" version="2.1.2" targetFramework="net48" />
   <package id="Devmasters.Core" version="2.1.9" targetFramework="net48" />
-  <package id="Devmasters.DT" version="2.1.6" targetFramework="net48" />
+  <package id="Devmasters.DT" version="2.1.8" targetFramework="net48" />
   <package id="Devmasters.IO" version="2.1.3" targetFramework="net48" />
   <package id="Devmasters.Lang" version="2.2.1" targetFramework="net48" />
   <package id="Devmasters.Logging" version="2.1.2" targetFramework="net48" />
   <package id="Devmasters.Net" version="2.1.6" targetFramework="net48" />
-  <package id="HtmlAgilityPack" version="1.11.28" targetFramework="net48" />
-  <package id="IPNetwork2" version="2.5.240" targetFramework="net48" />
+  <package id="HtmlAgilityPack" version="1.11.30" targetFramework="net48" />
+  <package id="IPNetwork2" version="2.5.250" targetFramework="net48" />
   <package id="log4net" version="2.0.12" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Http.Extensions" version="2.2.0" targetFramework="net48" />
-  <package id="Microsoft.AspNetCore.Http.Features" version="2.2.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.2.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="5.0.3" targetFramework="net48" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Net.Http.Headers" version="2.2.8" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="SharpZipLib" version="1.3.1" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections.NonGeneric" version="4.3.0" targetFramework="net472" />
-  <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net48" />
+  <package id="System.Configuration.ConfigurationManager" version="5.0.0" targetFramework="net48" />
   <package id="System.Console" version="4.3.1" targetFramework="net472" />
   <package id="System.Data.SqlClient" version="4.8.2" targetFramework="net48" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net472" />
@@ -34,6 +34,7 @@
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.Watcher" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.Pipelines" version="5.0.1" targetFramework="net48" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Net.NameResolution" version="4.3.0" targetFramework="net472" />
@@ -45,19 +46,20 @@
   <package id="System.Reflection.TypeExtensions" version="4.7.0" targetFramework="net472" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net472" />
-  <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net48" />
-  <package id="System.Security.Permissions" version="4.7.0" targetFramework="net48" />
-  <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net48" />
+  <package id="System.Security.Permissions" version="5.0.0" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net48" />
-  <package id="System.Text.Encodings.Web" version="4.7.1" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="5.0.0" targetFramework="net48" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net472" />
