--- a/Web.Statu/packages.config
+++ b/Web.Statu/packages.config
@@ -7,29 +7,29 @@
   <package id="Common.Logging" version="3.4.1" targetFramework="net48" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net48" />
   <package id="CouchbaseNetClient" version="2.7.22" targetFramework="net48" />
-  <package id="CsvHelper" version="18.0.0" targetFramework="net48" />
+  <package id="CsvHelper" version="25.0.0" targetFramework="net48" />
   <package id="Devmasters.Batch" version="2.1.3" targetFramework="net48" />
   <package id="Devmasters.Cache" version="2.1.3" targetFramework="net48" />
   <package id="Devmasters.Cache.Couchbase" version="2.0.3" targetFramework="net48" />
   <package id="Devmasters.Collections" version="2.1.2" targetFramework="net48" />
   <package id="Devmasters.Core" version="2.1.9" targetFramework="net48" />
   <package id="Devmasters.Crypto" version="2.1.1" targetFramework="net48" />
-  <package id="Devmasters.DT" version="2.1.6" targetFramework="net48" />
+  <package id="Devmasters.DT" version="2.1.8" targetFramework="net48" />
   <package id="Devmasters.Enums" version="2.1.5" targetFramework="net48" />
   <package id="Devmasters.Imaging" version="2.1.1" targetFramework="net48" />
   <package id="Devmasters.IO" version="2.1.3" targetFramework="net48" />
   <package id="Devmasters.Lang" version="2.2.1" targetFramework="net48" />
   <package id="Devmasters.Logging" version="2.1.2" targetFramework="net48" />
   <package id="Devmasters.Net" version="2.1.6" targetFramework="net48" />
-  <package id="EasyNetQ" version="5.6.0" targetFramework="net48" />
-  <package id="Elasticsearch.Net" version="7.8.2" targetFramework="net472" />
+  <package id="EasyNetQ" version="6.3.1" targetFramework="net48" />
+  <package id="Elasticsearch.Net" version="7.11.1" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
-  <package id="EPPlus" version="5.4.2" targetFramework="net48" />
+  <package id="EPPlus" version="5.5.5" targetFramework="net48" />
   <package id="HlidacStatu.Api.Dataset.Connector" version="1.3.3" targetFramework="net472" />
-  <package id="HtmlAgilityPack" version="1.11.28" targetFramework="net48" />
-  <package id="IPNetwork2" version="2.5.240" targetFramework="net48" />
+  <package id="HtmlAgilityPack" version="1.11.30" targetFramework="net48" />
+  <package id="IPNetwork2" version="2.5.250" targetFramework="net48" />
   <package id="jQuery" version="3.5.1" targetFramework="net472" />
-  <package id="jQuery.Validation" version="1.19.2" targetFramework="net48" />
+  <package id="jQuery.Validation" version="1.19.3" targetFramework="net48" />
   <package id="log4net" version="2.0.12" targetFramework="net48" />
   <package id="Microsoft.ApplicationInsights" version="2.14.0" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net472" />
@@ -58,15 +58,17 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Http.Extensions" version="2.2.0" targetFramework="net48" />
-  <package id="Microsoft.AspNetCore.Http.Features" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="5.0.3" targetFramework="net48" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net472" />
+  <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.2.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net48" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.4.0" targetFramework="net48" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.12" targetFramework="net48" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net472" />
   <package id="Microsoft.Net.Http.Headers" version="2.2.8" targetFramework="net48" />
   <package id="Microsoft.Owin" version="4.1.1" targetFramework="net48" />
@@ -81,9 +83,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Moment.js" version="2.29.1" targetFramework="net48" />
-  <package id="NEST" version="7.8.2" targetFramework="net472" />
+  <package id="NEST" version="7.11.1" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="Newtonsoft.Json.Schema" version="3.0.13" targetFramework="net472" />
+  <package id="Newtonsoft.Json.Schema" version="3.0.14" targetFramework="net48" />
   <package id="OpenTracing" version="0.12.1" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
@@ -95,20 +97,21 @@
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.NonGeneric" version="4.3.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
-  <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net48" />
+  <package id="System.Configuration.ConfigurationManager" version="5.0.0" targetFramework="net48" />
   <package id="System.Console" version="4.3.1" targetFramework="net472" />
   <package id="System.Data.SqlClient" version="4.8.2" targetFramework="net48" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="5.0.1" targetFramework="net48" />
   <package id="System.Diagnostics.Process" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.TraceSource" version="4.3.0" targetFramework="net472" />
-  <package id="System.Drawing.Common" version="4.7.0" targetFramework="net48" />
+  <package id="System.Drawing.Common" version="5.0.1" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.Watcher" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.Pipelines" version="5.0.1" targetFramework="net48" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
@@ -121,27 +124,27 @@
   <package id="System.Reflection.TypeExtensions" version="4.7.0" targetFramework="net472" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
-  <package id="System.Runtime.Caching" version="4.7.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
+  <package id="System.Runtime.Caching" version="5.0.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net472" />
-  <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
-  <package id="System.Security.Permissions" version="4.7.0" targetFramework="net48" />
-  <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net48" />
+  <package id="System.Security.Permissions" version="5.0.0" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net48" />
-  <package id="System.Text.Encoding.CodePages" version="4.7.1" targetFramework="net472" />
-  <package id="System.Text.Encodings.Web" version="4.7.1" targetFramework="net48" />
+  <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="5.0.0" targetFramework="net48" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
-  <package id="System.Threading.Channels" version="4.7.1" targetFramework="net472" />
+  <package id="System.Threading.Channels" version="5.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
