Fix problems in sponzoring loader

--- a/SponzoriLoader/App.config
+++ b/SponzoriLoader/App.config
@@ -24,6 +24,9 @@
     </providers>
   </entityFramework>
   <appSettings>
+    <add key="WebAppDataPath" value="d:\repos\HlidacStatu\HlidacStatu\Web.Statu\App_Data" />
+    <add key="DumpsPath" value="d:\repos\HlidacStatu\Data\_dumps" />
+    <add key="CnnString" value="data source=.;initial catalog=Firmy;persist security info=True;user id=firmy;password=hlidac;MultipleActiveResultSets=True;App=EntityFramework" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
