--- a/Web.Statu/Web.csproj
+++ b/Web.Statu/Web.csproj
@@ -653,6 +653,7 @@
   <ItemGroup>
     <Content Include="404.html" />
     <Content Include="500.html" />
+    <Content Include="App_Data\czobce.txt" />
     <Content Include="App_Data\haarcascade_frontalface_default.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
