--- a/Plugin.IssueAnalyzers/packages.config
+++ b/Plugin.IssueAnalyzers/packages.config
@@ -4,11 +4,19 @@
   <package id="Devmasters.Collections" version="2.2.2" targetFramework="net48" />
   <package id="Devmasters.Core" version="2.2.9" targetFramework="net48" />
   <package id="Devmasters.Logging" version="2.2.2" targetFramework="net48" />
+  <package id="Elasticsearch.Net" version="7.12.0" targetFramework="net48" />
   <package id="HtmlAgilityPack" version="1.11.32" targetFramework="net48" />
   <package id="log4net" version="2.0.12" targetFramework="net48" />
+  <package id="Microsoft.CSharp" version="4.6.0" targetFramework="net48" />
+  <package id="NEST" version="7.12.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="5.0.0" targetFramework="net48" />
   <package id="System.Data.SqlClient" version="4.8.2" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
   <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net48" />
   <package id="System.Security.Permissions" version="5.0.0" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
